# App-AKGroup

./: .env.example.NEW  .gitignore  AGENTS.md  CLAUDE.md  LEEME_PRIMERO.txt  README.md  alembic.ini  check_components.py  main.py  pyproject.toml  pyproject.toml.NEW  run_app.py  run_backend.py  run_frontend.py  test_simple_dialog.py  verify_numbering.py
.backups/src/: __init__.py
.backups/src/database/: connection.py  engine.py  session.py
.backups/src/exceptions/: __init__.py  repository.py
.backups/src/frontend/: main.py
.claude/: settings.local.json
docs/: API_README.md  ARCHITECTURE.md  COMPANY_TYPE_ENUM.md  FLET_V1_MIGRATION.md  FLET_V1_MIGRATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LOOKUP_API_GUIDE.md  LOOKUP_IMPLEMENTATION_SUMMARY.md  MIGRATION_PLAN.md  PLAN_IMPLEMENTACION_MODELOS.md  PYTHON_BEST_PRACTICES.md  QUICK_REFERENCE_ARCHITECTURE.md  README_NUEVO.md  REFACTORING_MAIN_VIEW.md  RESUMEN_PREPARACION.md  guia_flet.md  repository_refactoring_plan.md
docs/agents/: alembic_rules.md  mysql_configuration.md  pendulum_rules.md  python313.md  slqalchemy20ext.md  sqlalchemy20.md  sqlite_configuration.md
docs/models/: addresses.py  articles.py  artinomens.py  branch_offices.py  companies.py  contacts.py  delivery_dates.py  invoices_exports.py  invoices_sii.py  nomen_nomens.py  nomenclatures.py  order_delivery.py  orders.py  payment_condition.py  quotes.py  quotes_articles.py  quotes_nomenclature.py  ruts.py  setting.py  staffs.py  tranports.py
docs/multi-repo/: 01-GUIDE.md  02-SETUP.md  03-WORKFLOW.md  04-API-CONTRACT.md  05-DEPLOYMENT.md  06-TROUBLESHOOTING.md  07-BEST-PRACTICES.md  README.md
examples/: company_type_enum_usage.py
migrations/: env.py
migrations/versions/: 08063dc119e8_add_image_url_and_plan_url_to_products_.py  0dd3f1c106bf_add_payment_type_lookup_and_link_to_.py  1782d0df07a8_add_order_products_table.py  69d4d9a050c0_rename_payment_condition_code_to_.py  735494c7fad2_add_trigram_to_sequences.py  9d605f536188_add_supplier_reference_and_customs_.py  a2587c89b2ce_rename_branch_to_plant.py  a2ea0f1e2dc9_add_sequences_table.py  add_customer_po_number_to_orders.py  c98ad17d30ad_add_company_rut_id_to_quotes_and_orders.py  eb00eeab1144_initial_migration_all_tables_with_.py
scripts/: __init__.py  cleanup_database.py  clear_business_data.py  dev_all.py  dev_backend.py  dev_frontend.py  fix_db_schema.py  fix_duplicate_indexes.py  inspect_db.py  refactor_repository.py  reset_db.py  seed_company_types.py  seed_database.py  update_imports.py  verify_plant_refactor.py
seeds/: seed_chile_cities.py  seed_companies_extended.py  seed_company_details.py  seed_components.py  seed_countries.py  seed_data.py  seed_lookups.py  seed_payment_types.py  seed_products.py  seed_products_extended.py  seed_staff.py
src/api/: __init__.py  dependencies.py  error_handlers.py
src/backend/: __init__.py  main.py
src/config/: __init__.py
src/database/: __init__.py
src/exceptions/: service.py
src/frontend/: README.md  __init__.py  app_state.py  color_constants.py  layout_constants.py  main.py  navigation_config.py
src/models/: __init__.py
src/schemas/: __init__.py
src/services/: __init__.py  base.py
src/shared/: __init__.py  constants.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_company_type_enum.py
tests/backend/: conftest.py
(+359 files in other folders)
