[tool.poetry]
name = "app-akgroup"
version = "0.1.0"
description = "Sistema de gestión empresarial AK Group - Monorepo FastAPI + Flet"
authors = ["Rafael Arenas López <ra.arenas.lopez@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.scripts]
backend = "scripts.dev_backend:main"
frontend = "scripts.dev_frontend:main"
dev = "scripts.dev_all:main"

[tool.poetry.dependencies]
python = "^3.13"
# Backend dependencies
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.44"
alembic = "^1.17.0"
aiosqlite = "^0.21.0"
pymysql = "^1.1.0"
# Frontend dependencies
flet = "^0.80.0"
httpx = "^0.28.1"
# Shared dependencies
pydantic = "^2.12.3"
pydantic-settings = "^2.11.0"
loguru = "^0.7.3"
pendulum = "^3.1.0"
email-validator = "^2.3.0"
greenlet = "^3.2.4"
openpyxl = "^3.1.5"
cryptography = "^44.0.0"
annotated-types = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pytest-asyncio = "^1.2.0"
faker = "^37.12.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
